Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22124

galera.GCF-360 MTR failed: WSREP: Sending JOIN failed: -107 (Transport endpoint is not connected)

    XMLWordPrintable

Details

    • Q1/2026 Galera Maintenance

    Description

      galera.GCF-360 failed on bb: WSREP: Sending JOIN failed: -107 (Transport endpoint is not connected).

      stdio.log:

      10.5.3 b2bc837ebe073a53c6ba5e756d4c0a6f586fa12f

      galera.GCF-360 'innodb'                  w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2020-03-31 08:01:10
      line
      2020-03-31  8:00:57 2 [Warning] WSREP: Sending JOIN failed: -107 (Transport endpoint is not connected). Will retry in new primary component.
      ^ Found warnings in /dev/shm/var/1/log/mysqld.3.err
      ok
      

      mysqld.3.err

      Attachments

        Issue Links

          Activity

            People

              janlindstrom Jan Lindström
              stepan.patryshev Stepan Patryshev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.